[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/player_weapon.png" type="Texture" id=2]
[ext_resource path="res://Sprites/lightmask02.png" type="Texture" id=3]
[ext_resource path="res://Sounds/gunshot.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/treasure.wav" type="AudioStream" id=5]
[ext_resource path="res://Sounds/key.wav" type="AudioStream" id=6]
[ext_resource path="res://Sounds/hurt.wav" type="AudioStream" id=7]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1

[sub_resource type="CircleShape2D" id=2]
radius = 28.4724

[sub_resource type="Animation" id=3]
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 22.704

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
light_mask = 2
scale = Vector2( 0.2, 0.2 )
z_index = 1
collision_layer = 2
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
material = SubResource( 1 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
vframes = 2

[node name="shoot_rate" type="Timer" parent="."]
wait_time = 0.2

[node name="camera" type="Camera2D" parent="."]
current = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2( -6, 0 )
scale = Vector2( 0.7, 0.7 )
shape = SubResource( 2 )

[node name="anim" type="AnimationPlayer" parent="."]
playback_speed = 2.5
anims/walk = SubResource( 3 )

[node name="hitbox" type="Area2D" parent="."]

[node name="shape" type="CollisionShape2D" parent="hitbox"]
position = Vector2( -6, 0 )
shape = SubResource( 4 )

[node name="light" type="Light2D" parent="."]
light_mask = 2
texture = ExtResource( 3 )
texture_scale = 3.2
shadow_enabled = true

[node name="audio" type="Node2D" parent="."]

[node name="gunshot" type="AudioStreamPlayer2D" parent="audio"]
stream = ExtResource( 4 )
volume_db = -25.0
attenuation = 0.297302

[node name="treasure" type="AudioStreamPlayer2D" parent="audio"]
stream = ExtResource( 5 )
volume_db = -15.0

[node name="key" type="AudioStreamPlayer2D" parent="audio"]
stream = ExtResource( 6 )

[node name="hurt" type="AudioStreamPlayer2D" parent="audio"]
stream = ExtResource( 7 )
volume_db = -15.0

[connection signal="timeout" from="shoot_rate" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
